<resources>
    <string name="app_name">RD Collection</string>
    <string name="Watchlist">Watchlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment 1</string>
    <string name="hello_blank_fragment2">Hello blank fragment 2</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="all_customer">All Customer</string>
    <string name="due_customer">Due Customer</string>
    <string name="customer_nmae">Customer Nmae</string>
    <string name="due_amount">Due Amount :</string>
    <string name="default_due_amount">10000</string>
    <string name="_10000">10000</string>
    <string name="athearate">find</string>
    <string name="plus">+</string>
    <string name="welcome_in_due_activity">Welcome in Due activity</string>
    <string name="sorry_this_page_is_in_progrece">Sorry this page is in progrece</string>
    <string name="add_a_new_customer">Add a New Customer</string>
    <string name="enter_customer_name">Enter Customer Name :</string>
    <string name="enter_amount">Enter Amount ...</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
</resources>