<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/popup_window"
    android:backgroundTint="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:elevation="20dp"
        android:background="@drawable/card_layout"
        android:backgroundTint="#8EB0F1"
        app:cardBackgroundColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_a_new_customer"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/enter_customer_name"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/Customername_edt_txt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="Enter Name"
                    android:padding="10dp"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/card_layout"/>
           <TextView

               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Enter Amount : "
               android:layout_marginStart="20dp"
               android:layout_marginTop="20dp"
               android:textSize="22sp"
               android:textStyle="bold"
               android:textColor="@color/white"/>
               <EditText
                   android:id="@+id/amount_edt_txt"
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:hint="@string/enter_amount"
                   android:background="@drawable/card_layout"
                   android:backgroundTint="@color/white"
                   android:textSize="22sp"
                   android:padding="10dp"
                   android:layout_marginTop="20dp"/>
          <LinearLayout
              style="?android:attr/buttonBarStyle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:gravity="center"
              android:layout_marginTop="20dp">

              <Button
                  android:id="@+id/cancell_add_btn"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:backgroundTint="@color/white"
                  android:text="@string/cancel"
                  android:textColor="@color/black"
                  android:textSize="18sp"
                  android:layout_marginEnd="40dp" />

              <Button
                  android:id="@+id/Submit_add_btn"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:backgroundTint="@color/white"
                  android:text="@string/submit"
                  android:textColor="@color/black"
                  android:textSize="18sp"
                  android:layout_marginStart="40dp"/>
          </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>